--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "type": "module"
 }
